adding config params, code cleanup

--- a/language/en-GB/en-GB.plg_system_less.ini
+++ b/language/en-GB/en-GB.plg_system_less.ini
@@ -1,1 +1,7 @@
 PLG_SYSTEM_LESS_XML_DESC="Less plugin to compile changed .less files to .css files automatically. Stores changes in cache and only compiles files if they have been changed."
+PLG_SYSTEM_LESS_FIELD_FORCE_LABEL="Force compiling"
+PLG_SYSTEM_LESS_FIELD_FORCE_DESC="Forces compiling of .less files on each page reload"
+PLG_SYSTEM_LESS_FIELD_LESSFILE_LABEL="Path to template.less (inputfile)"
+PLG_SYSTEM_LESS_FIELD_LESSFILE_DESC="Relative path to template.less file inside template folder. default:  less/template.less"
+PLG_SYSTEM_LESS_FIELD_CSSFILE_LABEL="Path to template.css (outputfile)"
+PLG_SYSTEM_LESS_FIELD_CSSFILE_DESC="Relative path to destination .css file e.g. css/template.css"
