--- a/language/en-GB/en-GB.plg_system_less.ini
+++ b/language/en-GB/en-GB.plg_system_less.ini
@@ -1,7 +1,19 @@
+PLG_SYSTEM_LESS="System - Less Compiler"
 PLG_SYSTEM_LESS_XML_DESC="Less plugin to compile changed .less files to .css files automatically. Stores changes in cache and only compiles files if they have been changed."
+PLG_SYSTEM_LESS_FIELD_MODE_LABEL="Plugin Mode"
+PLG_SYSTEM_LESS_FIELD_MODE_DESC="Set if the plugin should compile .less files on only on frontend templates, only on backend or both."
+PLG_SYSTEM_LESS_FIELD_MODE_FRONTEND="Site only (frontend)"
+PLG_SYSTEM_LESS_FIELD_MODE_ADMIN="Administrator only (backend)"
+PLG_SYSTEM_LESS_FIELD_MODE_BOTH="Site and Administrator templates"
 PLG_SYSTEM_LESS_FIELD_FORCE_LABEL="Force compiling"
 PLG_SYSTEM_LESS_FIELD_FORCE_DESC="Forces compiling of .less files on each page reload"
+PLG_SYSTEM_LESS_SITESPACER="Site Template Options"
 PLG_SYSTEM_LESS_FIELD_LESSFILE_LABEL="Path to template.less (inputfile)"
 PLG_SYSTEM_LESS_FIELD_LESSFILE_DESC="Relative path to template.less file inside template folder. default:  less/template.less"
 PLG_SYSTEM_LESS_FIELD_CSSFILE_LABEL="Path to template.css (outputfile)"
 PLG_SYSTEM_LESS_FIELD_CSSFILE_DESC="Relative path to destination .css file e.g. css/template.css"
+PLG_SYSTEM_LESS_ADMINSPACER="Administrator Template Options"
+PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_LABEL="Path to template.less (inputfile)"
+PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_DESC="Relative path to template.less file inside administrator template folder. default:  less/template.less"
+PLG_SYSTEM_LESS_FIELD_ADMINCSSFILE_LABEL="Path to template.css (outputfile)"
+PLG_SYSTEM_LESS_FIELD_ADMINCSSFILE_DESC="Relative path to destination .css file in administrator folder e.g. css/template.css"
