--- a/language/en-GB/en-GB.plg_system_less.ini
+++ b/language/en-GB/en-GB.plg_system_less.ini
@@ -17,3 +17,8 @@ PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_LABEL="Path to template.less (inputfile)"
 PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_DESC="Relative path to template.less file inside administrator template folder. default:  less/template.less"
 PLG_SYSTEM_LESS_FIELD_ADMINCSSFILE_LABEL="Path to template.css (outputfile)"
 PLG_SYSTEM_LESS_FIELD_ADMINCSSFILE_DESC="Relative path to destination .css file in administrator folder e.g. css/template.css"
+PLG_SYSTEM_LESS_LESSSPACER="Less Compiler Options"
+PLG_SYSTEM_LESS_FIELD_COMMENTS_LABEL="Preserve comments"
+PLG_SYSTEM_LESS_FIELD_COMMENTS_DESC="If enabled comments will not be stripped out and kept in .css output file"
+PLG_SYSTEM_LESS_FIELD_COMPRESSION_LABEL="Compression"
+PLG_SYSTEM_LESS_FIELD_COMPRESSION_DESC="Compress the .css output for minimal load time and file size"
