--- a/language/fr-FR/fr-FR.plg_system_less.ini
+++ b/language/fr-FR/fr-FR.plg_system_less.ini
@@ -1,11 +1,11 @@
-; @description [Description] [Name of language]([Country code])
+; @description fr-FR.plg_system_less.ini
 ; @date        2012-10-13
 ; @author      lomart
 ; @license     http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL
 ; @note        Client Administrator
 ; @note        All ini files need to be saved as UTF-8 - No BOM
 
-PLG_SYSTEM_LESS="System - Less Compiler"
+PLG_SYSTEM_LESS="Plugin System - Less Compiler"
 PLG_SYSTEM_LESS_XML_DESC="Le plugin LESS compile un fichier .less modifié en un fichier .css automatiquement. Stocke les modifications dans le cache et compile les fichiers uniquement si modification"
 PLG_SYSTEM_LESS_FIELD_MODE_LABEL="Mode Plugin"
 PLG_SYSTEM_LESS_FIELD_MODE_DESC="Indiquez si le plugin compile les fichiers .less seulement en fontend, seulement en backend ou les 2."
@@ -24,3 +24,8 @@ PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_LABEL="Chemin vers fichier less (inputfile)"
 PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_DESC="Chemin relatif vers le fichier .less dans le dossier du template administrateur (par exemple: less/template.less)"
 PLG_SYSTEM_LESS_FIELD_ADMINCSSFILE_LABEL="Chemin vers fichier css (outputfile)"
 PLG_SYSTEM_LESS_FIELD_ADMINCSSFILE_DESC="Chemin relatif vers le fichier .css dans le dossier du template administrateur (par exemple: css/template.css)"
+PLG_SYSTEM_LESS_LESSSPACER="Options Less Compiler"
+PLG_SYSTEM_LESS_FIELD_COMMENTS_LABEL="Conserver commentaires"
+PLG_SYSTEM_LESS_FIELD_COMMENTS_DESC="Permet de conserver les commentaires dans le fichier .css généré"
+PLG_SYSTEM_LESS_FIELD_COMPRESSION_LABEL="Compression"
+PLG_SYSTEM_LESS_FIELD_COMPRESSION_DESC="Compression du fichier .css généré pour réduire le temps de chargement et son poids."
