--- a/language/fr-FR/fr-FR.plg_system_less.sys.ini
+++ b/language/fr-FR/fr-FR.plg_system_less.sys.ini
@@ -1,2 +1,2 @@
-PLG_SYSTEM_LESS="System - Less Compiler"
+PLG_SYSTEM_LESS="Plugin System - Less Compiler"
 PLG_SYSTEM_LESS_XML_DESC="Le plugin LESS compile un fichier .less modifié en un fichier .css automatiquement. Stocke les modifications dans le cache et compile les fichiers uniquement si modification"
