+ adding German translation # update French translation, thanks lomart

--- a/language/en-GB/en-GB.plg_system_less.ini
+++ b/language/en-GB/en-GB.plg_system_less.ini
@@ -7,17 +7,17 @@ PLG_SYSTEM_LESS_FIELD_MODE_ADMIN="Administrator only (backend)"
 PLG_SYSTEM_LESS_FIELD_MODE_BOTH="Site and Administrator templates"
 PLG_SYSTEM_LESS_FIELD_FORCE_LABEL="Force compiling"
 PLG_SYSTEM_LESS_FIELD_FORCE_DESC="Forces compiling of .less files on each page reload"
-PLG_SYSTEM_LESS_SITESPACER="Site Template Options"
+PLG_SYSTEM_LESS_SITESPACER="<h3>Site Template Options</h3>"
 PLG_SYSTEM_LESS_FIELD_LESSFILE_LABEL="Path to template.less (inputfile)"
 PLG_SYSTEM_LESS_FIELD_LESSFILE_DESC="Relative path to template.less file inside template folder. default:  less/template.less"
 PLG_SYSTEM_LESS_FIELD_CSSFILE_LABEL="Path to template.css (outputfile)"
 PLG_SYSTEM_LESS_FIELD_CSSFILE_DESC="Relative path to destination .css file e.g. css/template.css"
-PLG_SYSTEM_LESS_ADMINSPACER="Administrator Template Options"
+PLG_SYSTEM_LESS_ADMINSPACER="<h3>Administrator Template Options</h3>"
 PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_LABEL="Path to template.less (inputfile)"
 PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_DESC="Relative path to template.less file inside administrator template folder. default:  less/template.less"
 PLG_SYSTEM_LESS_FIELD_ADMINCSSFILE_LABEL="Path to template.css (outputfile)"
 PLG_SYSTEM_LESS_FIELD_ADMINCSSFILE_DESC="Relative path to destination .css file in administrator folder e.g. css/template.css"
-PLG_SYSTEM_LESS_LESSSPACER="Less Compiler Options"
+PLG_SYSTEM_LESS_LESSSPACER="<h3>Less Compiler Options</h3>"
 PLG_SYSTEM_LESS_FIELD_COMMENTS_LABEL="Preserve comments"
 PLG_SYSTEM_LESS_FIELD_COMMENTS_DESC="If enabled comments will not be stripped out and kept in .css output file"
 PLG_SYSTEM_LESS_FIELD_COMPRESSION_LABEL="Compression"
