--- a/language/fr-FR/fr-FR.plg_system_less.ini
+++ b/language/fr-FR/fr-FR.plg_system_less.ini
@@ -1,11 +1,11 @@
-; @description fr-FR.plg_system_less.ini
+; @description [Description] [Name of language]([Country code])
 ; @date        2012-10-13
 ; @author      lomart
 ; @license     http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL
 ; @note        Client Administrator
 ; @note        All ini files need to be saved as UTF-8 - No BOM
 
-PLG_SYSTEM_LESS="Plugin System - Less Compiler"
+PLG_SYSTEM_LESS="System - Less Compiler"
 PLG_SYSTEM_LESS_XML_DESC="Le plugin LESS compile un fichier .less modifié en un fichier .css automatiquement. Stocke les modifications dans le cache et compile les fichiers uniquement si modification"
 PLG_SYSTEM_LESS_FIELD_MODE_LABEL="Mode Plugin"
 PLG_SYSTEM_LESS_FIELD_MODE_DESC="Indiquez si le plugin compile les fichiers .less seulement en fontend, seulement en backend ou les 2."
@@ -14,18 +14,18 @@ PLG_SYSTEM_LESS_FIELD_MODE_ADMIN="Template Administrateur uniquement (backend)"
 PLG_SYSTEM_LESS_FIELD_MODE_BOTH="Site et Administrateur"
 PLG_SYSTEM_LESS_FIELD_FORCE_LABEL="Forcer compilation"
 PLG_SYSTEM_LESS_FIELD_FORCE_DESC="Forcer la compilation à chaque rechargement de la page"
-PLG_SYSTEM_LESS_SITESPACER="Options template Site"
+PLG_SYSTEM_LESS_SITESPACER="<h3>Options template Site</h3>"
 PLG_SYSTEM_LESS_FIELD_LESSFILE_LABEL="Chemin vers fichier less (inputfile)"
 PLG_SYSTEM_LESS_FIELD_LESSFILE_DESC="Chemin relatif vers le fichier .less dans le dossier du template (par exemple: less/template.less)"
 PLG_SYSTEM_LESS_FIELD_CSSFILE_LABEL="Chemin vers fichier css (outputfile)"
 PLG_SYSTEM_LESS_FIELD_CSSFILE_DESC="Chemin relatif vers le fichier .css de destination (par exemple: css/template.css)"
-PLG_SYSTEM_LESS_ADMINSPACER="Options Template Administrateur "
+PLG_SYSTEM_LESS_ADMINSPACER="<h3>Options Template Administrateur</h3>"
 PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_LABEL="Chemin vers fichier less (inputfile)"
 PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_DESC="Chemin relatif vers le fichier .less dans le dossier du template administrateur (par exemple: less/template.less)"
 PLG_SYSTEM_LESS_FIELD_ADMINCSSFILE_LABEL="Chemin vers fichier css (outputfile)"
 PLG_SYSTEM_LESS_FIELD_ADMINCSSFILE_DESC="Chemin relatif vers le fichier .css dans le dossier du template administrateur (par exemple: css/template.css)"
-PLG_SYSTEM_LESS_LESSSPACER="Options Less Compiler"
+PLG_SYSTEM_LESS_LESSSPACER="<h3>Options Less Compiler</h3>"
 PLG_SYSTEM_LESS_FIELD_COMMENTS_LABEL="Conserver commentaires"
-PLG_SYSTEM_LESS_FIELD_COMMENTS_DESC="Permet de conserver les commentaires dans le fichier .css généré"
+PLG_SYSTEM_LESS_FIELD_COMMENTS_DESC="OUI conserve les commentaires à l'intérieur du fichier CSS généré"
 PLG_SYSTEM_LESS_FIELD_COMPRESSION_LABEL="Compression"
-PLG_SYSTEM_LESS_FIELD_COMPRESSION_DESC="Compression du fichier .css généré pour réduire le temps de chargement et son poids."
+PLG_SYSTEM_LESS_FIELD_COMPRESSION_DESC="Compresse le fichier css généré pour réduire la taille et le temps de chargement"
