cleanup + translations (EN, DE) of the new client side compiler feature

--- a/language/de-DE/de-DE.plg_system_less.ini
+++ b/language/de-DE/de-DE.plg_system_less.ini
@@ -22,3 +22,6 @@ PLG_SYSTEM_LESS_FIELD_COMMENTS_LABEL="Kommentare beibehalten"
 PLG_SYSTEM_LESS_FIELD_COMMENTS_DESC="Falls aktiv, werden Kommentare nicht gelöscht und bleiben erhalten."
 PLG_SYSTEM_LESS_FIELD_COMPRESSION_LABEL="Komprimierung"
 PLG_SYSTEM_LESS_FIELD_COMPRESSION_DESC="Komprimierung aktivieren um minimale Dateigröße zu erreichen."
+PLG_SYSTEM_LESS_CLIENTSIDESPACER="<h3>Client-side Compiler Optionen <h3>Funktioniert mit &lt;a href='https://addons.mozilla.org/en-US/firefox/addon/fireless/' target='_blank'&gt;FireLESS&lt;/a&gt; Erweiterung für Firefox/Firebug. Google Chrome Entwicklertools (funktioniert derzeit nicht)"
+PLG_SYSTEM_LESS_FIELD_CLIENTSIDE_ENABLE_LABEL="Client-side Compiler verwenden"
+PLG_SYSTEM_LESS_FIELD_CLIENTSIDE_ENABLE_DESC="Zeigt im Inspektor direkt die Zeilennummer der zugehörigen .less Datei (und nicht der .css) Datei an. Nur während der Entwicklung aktivieren; Auf Produktivsystem abschalten."
