--- a/language/en-GB/en-GB.plg_system_less.ini
+++ b/language/en-GB/en-GB.plg_system_less.ini
@@ -22,3 +22,6 @@ PLG_SYSTEM_LESS_FIELD_COMMENTS_LABEL="Preserve comments"
 PLG_SYSTEM_LESS_FIELD_COMMENTS_DESC="If enabled comments will not be stripped out and kept in .css output file"
 PLG_SYSTEM_LESS_FIELD_COMPRESSION_LABEL="Compression"
 PLG_SYSTEM_LESS_FIELD_COMPRESSION_DESC="Compress the .css output for minimal load time and file size"
+PLG_SYSTEM_LESS_CLIENTSIDESPACER="&lt;h3&gt; Client-side Compiler Options &lt;/h3&gt;with &lt;a href='https://addons.mozilla.org/en-US/firefox/addon/fireless/' target='_blank'&gt;FireLESS&lt;/a&gt; add-on for Firefox (working) or Chrome dev tools (not working yet)"
+PLG_SYSTEM_LESS_FIELD_CLIENTSIDE_ENABLE_LABEL="Use client-side compiler"
+PLG_SYSTEM_LESS_FIELD_CLIENTSIDE_ENABLE_DESC="Shows you the line numbers of the corresponding .less files (instead of the main .css). Enable only for development, disable for production. Works currently only in Firefox/FireBug with FireLESS addon"
