--- a/language/en-GB/en-GB.plg_system_less.ini
+++ b/language/en-GB/en-GB.plg_system_less.ini
@@ -7,7 +7,7 @@ PLG_SYSTEM_LESS_FIELD_MODE_ADMIN="Administrator only (backend)"
 PLG_SYSTEM_LESS_FIELD_MODE_BOTH="Site and Administrator templates"
 PLG_SYSTEM_LESS_FIELD_FORCE_LABEL="Force compiling"
 PLG_SYSTEM_LESS_FIELD_FORCE_DESC="Forces compiling of .less files on each page reload"
-PLG_SYSTEM_LESS_SITESPACER="<h3>Site Template Options</h3>"
+PLG_SYSTEM_LESS_SITESPACER="<h3>Site Template Options</h3><p>Paths are relative to the active template location</p>"
 PLG_SYSTEM_LESS_FIELD_LESSFILE_LABEL="Path to template.less (inputfile)"
 PLG_SYSTEM_LESS_FIELD_LESSFILE_DESC="Relative path to template.less file inside template folder. default:  less/template.less"
 PLG_SYSTEM_LESS_FIELD_CSSFILE_LABEL="Path to template.css (outputfile)"
