--- a/language/fr-FR/fr-FR.plg_system_less.ini
+++ b/language/fr-FR/fr-FR.plg_system_less.ini
@@ -29,3 +29,6 @@ PLG_SYSTEM_LESS_FIELD_COMMENTS_LABEL="Conserver commentaires"
 PLG_SYSTEM_LESS_FIELD_COMMENTS_DESC="OUI conserve les commentaires à l'intérieur du fichier CSS généré"
 PLG_SYSTEM_LESS_FIELD_COMPRESSION_LABEL="Compression"
 PLG_SYSTEM_LESS_FIELD_COMPRESSION_DESC="Compresse le fichier css généré pour réduire la taille et le temps de chargement"
+PLG_SYSTEM_LESS_CLIENTSIDESPACER="<h3>Options compilateur coté client</h3> avec <a href='https://addons.mozilla.org/en-US/firefox/addon/fireless/' target='_blank'>FireLESS</a> l'add-on Firefox (disponible) ou l'outil de développement Chrome (non encore disponiblet)"
+PLG_SYSTEM_LESS_FIELD_CLIENTSIDE_ENABLE_LABEL="Utiliser le compilateur coté client"
+PLG_SYSTEM_LESS_FIELD_CLIENTSIDE_ENABLE_DESC="Vous indique le numéro de ligne et le nom du fichier LESS d'origine au lieu du CSS principal. A activer seulement pour le développement, désactivez en production. Fonctionne seulement dans Firefox / Firebug avec l'extension FireLESS"
