Added option for lessc version

--- a/language/en-GB/en-GB.plg_system_less.ini
+++ b/language/en-GB/en-GB.plg_system_less.ini
@@ -8,11 +8,15 @@ PLG_SYSTEM_LESS_FIELD_MODE_BOTH="Site and Administrator templates"
 PLG_SYSTEM_LESS_FIELD_FORCE_LABEL="Force compiling"
 PLG_SYSTEM_LESS_FIELD_FORCE_DESC="Forces compiling of .less files on each page reload"
 PLG_SYSTEM_LESS_SITESPACER="<h3>Site Template Options</h3><p>Paths are relative to the active template location</p>"
+PLG_SYSTEM_LESS_FIELD_SITELESSC_LABEL="Site Lessc Version"
+PLG_SYSTEM_LESS_FIELD_SITELESSC_DESC="For bootstrap 2 use 0.3.9, for Bootstrap 3 use 0.4.0"
 PLG_SYSTEM_LESS_FIELD_LESSFILE_LABEL="Path to template.less (inputfile)"
 PLG_SYSTEM_LESS_FIELD_LESSFILE_DESC="Relative path to template.less file inside template folder. default:  less/template.less"
 PLG_SYSTEM_LESS_FIELD_CSSFILE_LABEL="Path to template.css (outputfile)"
 PLG_SYSTEM_LESS_FIELD_CSSFILE_DESC="Relative path to destination .css file e.g. css/template.css"
 PLG_SYSTEM_LESS_ADMINSPACER="<h3>Administrator Template Options</h3>"
+PLG_SYSTEM_LESS_FIELD_ADMINLESSC_LABEL="Admin Lessc Version"
+PLG_SYSTEM_LESS_FIELD_ADMINLESSC_DESC="For bootstrap 2 use 0.3.9, for Bootstrap 3 use 0.4.0"
 PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_LABEL="Path to template.less (inputfile)"
 PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_DESC="Relative path to template.less file inside administrator template folder. default:  less/template.less"
 PLG_SYSTEM_LESS_FIELD_ADMINCSSFILE_LABEL="Path to template.css (outputfile)"
