Preparing for release 0.7.4 beta

--- a/language/de-DE/de-DE.plg_system_less.ini
+++ b/language/de-DE/de-DE.plg_system_less.ini
@@ -8,11 +8,15 @@ PLG_SYSTEM_LESS_FIELD_MODE_BOTH="Beide, Seiten- und Administrator-Templates"
 PLG_SYSTEM_LESS_FIELD_FORCE_LABEL="Erzwinge kompilieren"
 PLG_SYSTEM_LESS_FIELD_FORCE_DESC="Erzwingt das kompilieren der .less Dateien bei jedem Ladevorgang. D.h. Caching ist ausgeschalten."
 PLG_SYSTEM_LESS_SITESPACER="<h3>Seiten-Template Optionen</h3>"
+PLG_SYSTEM_LESS_FIELD_SITELESSC_LABEL="Frontend Lessphp-Version"
+PLG_SYSTEM_LESS_FIELD_SITELESSC_DESC="Für Bootstrap 2 wähle 0.3.9, for Bootstrap 3 wähle 0.4.0"
 PLG_SYSTEM_LESS_FIELD_LESSFILE_LABEL="Pfad zur template.less Datei"
 PLG_SYSTEM_LESS_FIELD_LESSFILE_DESC="Relativer Pfad zur template.less im Template Verzeichnis an. Standard:  less/template.less"
 PLG_SYSTEM_LESS_FIELD_CSSFILE_LABEL="Pfad zur template.css"
 PLG_SYSTEM_LESS_FIELD_CSSFILE_DESC="Relativer Pfad zur .css Datei an. Z.B. css/template.css"
 PLG_SYSTEM_LESS_ADMINSPACER="<h3>Administrator-Template Optionen</h3>"
+PLG_SYSTEM_LESS_FIELD_ADMINLESSC_LABEL="Backend Lessphp-Version"
+PLG_SYSTEM_LESS_FIELD_ADMINLESSC_DESC="Für Bootstrap 2 wähle 0.3.9, for Bootstrap 3 wähle 0.4.0"
 PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_LABEL="Pfad zur template.less Datei"
 PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_DESC="Relativer Pfad zur template.less im Administrator-Template Verzeichnis an. Standard:  less/template.less"
 PLG_SYSTEM_LESS_FIELD_ADMINCSSFILE_LABEL="Pfad zur template.css"
