Update Russian translations
Improve and add some missing translations

--- a/language/ru-RU/ru-RU.plg_system_less.ini
+++ b/language/ru-RU/ru-RU.plg_system_less.ini
@@ -1,24 +1,31 @@
-PLG_SYSTEM_LESS="Системный плагин - Less Компилятор"
-PLG_SYSTEM_LESS_XML_DESC="Less плагин автоматически компилирует .less файлы в .css файлы, только когда вы вносите изменения в них. Изменения хранятся в кэше."
+PLG_SYSTEM_LESS="Система - Компилятор Less"
+PLG_SYSTEM_LESS_XML_DESC="Плагин компилятор Less автоматически компилирует изменённые файлы .less в файлы .css. Изменения хранятся в кэше, перекомпиляция файлов производится только в том случае, если они были изменены."
 PLG_SYSTEM_LESS_FIELD_MODE_LABEL="Режим плагина"
-PLG_SYSTEM_LESS_FIELD_MODE_DESC="Режим компилирования .less файлов. Только для шаблона сайта, шаблона админки или обоих сразу."
+PLG_SYSTEM_LESS_FIELD_MODE_DESC="Режим компиляции файлов .less. Только для шаблона сайта, только для шаблона панели управления или для обоих сразу."
 PLG_SYSTEM_LESS_FIELD_MODE_FRONTEND="Шаблон сайта (frontend)"
-PLG_SYSTEM_LESS_FIELD_MODE_ADMIN="Шаблон админки (backend)"
-PLG_SYSTEM_LESS_FIELD_MODE_BOTH="Шаблон сайта и админки части"
-PLG_SYSTEM_LESS_FIELD_FORCE_LABEL="Компиляция при загрузке"
-PLG_SYSTEM_LESS_FIELD_FORCE_DESC="Компиляция .less файлов при каждой загрузке страниц сайта"
-PLG_SYSTEM_LESS_SITESPACER="<h3>Опции шаблона сайта</h3>"
+PLG_SYSTEM_LESS_FIELD_MODE_ADMIN="Шаблон панели управления (backend)"
+PLG_SYSTEM_LESS_FIELD_MODE_BOTH="Шаблоны сайта и панели управления"
+PLG_SYSTEM_LESS_FIELD_FORCE_LABEL="Всегда перекомпилировать"
+PLG_SYSTEM_LESS_FIELD_FORCE_DESC="Перекомпилировать файлы .less при каждой загрузке страниц сайта"
+PLG_SYSTEM_LESS_SITESPACER="<h3>Параметры шаблона сайта</h3>"
+PLG_SYSTEM_LESS_FIELD_SITELESSC_LABEL="Версия компилятора"
+PLG_SYSTEM_LESS_FIELD_SITELESSC_DESC="Для bootstrap 2 используйте 0.3.9, для Bootstrap 3 используйте 0.4.0"
 PLG_SYSTEM_LESS_FIELD_LESSFILE_LABEL="Путь до template.less"
-PLG_SYSTEM_LESS_FIELD_LESSFILE_DESC="Относительный путь до template.less внутри шаблона сайта. По-умолчанию:  less/template.less"
+PLG_SYSTEM_LESS_FIELD_LESSFILE_DESC="Относительный путь до входного файла template.less внутри шаблона сайта. По-умолчанию: less/template.less"
 PLG_SYSTEM_LESS_FIELD_CSSFILE_LABEL="Путь до template.css"
-PLG_SYSTEM_LESS_FIELD_CSSFILE_DESC="Относительный путь до .css внутри шаблона сайта. По-умолчанию: css/template.css"
-PLG_SYSTEM_LESS_ADMINSPACER="<h3>Опции шаблона админки</h3>"
+PLG_SYSTEM_LESS_FIELD_CSSFILE_DESC="Относительный путь до выходного файла .css. По-умолчанию: css/template.css"
+PLG_SYSTEM_LESS_ADMINSPACER="<h3>Параметры шаблона панели управления</h3>"
+PLG_SYSTEM_LESS_FIELD_ADMINLESSC_LABEL="Версия компилятора"
+PLG_SYSTEM_LESS_FIELD_ADMINLESSC_DESC="Для bootstrap 2 используйте 0.3.9, для Bootstrap 3 используйте 0.4.0"
 PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_LABEL="Путь до template.less"
-PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_DESC="Относительный путь до template.less внутри шаблона админки сайта. По-умолчанию:  less/template.less"
+PLG_SYSTEM_LESS_FIELD_ADMINLESSFILE_DESC="Относительный путь до входного файла template.less внутри шаблона панели управления сайта. По-умолчанию: less/template.less"
 PLG_SYSTEM_LESS_FIELD_ADMINCSSFILE_LABEL="Путь до template.css"
-PLG_SYSTEM_LESS_FIELD_ADMINCSSFILE_DESC="Относительный путь до .css внутри шаблона админки сайта. По-умолчанию: css/template.css"
-PLG_SYSTEM_LESS_LESSSPACER="<h3>Опции Less Компилятора</h3>"
-PLG_SYSTEM_LESS_FIELD_COMMENTS_LABEL="Оставить /* комментарии */ CSS "
-PLG_SYSTEM_LESS_FIELD_COMMENTS_DESC="Если включено, то комментарии будут пересены в .css файл"
-PLG_SYSTEM_LESS_FIELD_COMPRESSION_LABEL="Компрессия"
-PLG_SYSTEM_LESS_FIELD_COMPRESSION_DESC="Компрессия .css для сжатия размера файла и увеличения скорости его загрузки"
+PLG_SYSTEM_LESS_FIELD_ADMINCSSFILE_DESC="Относительный путь до выходного файла .css внутри шаблона панели управления сайта. По-умолчанию: css/template.css"
+PLG_SYSTEM_LESS_LESSSPACER="<h3>Параметры компилятора Less</h3>"
+PLG_SYSTEM_LESS_FIELD_COMMENTS_LABEL="Оставлять /* */ комментарии"
+PLG_SYSTEM_LESS_FIELD_COMMENTS_DESC="Если включено, то /* */ комментарии будут пересены в файл .css. <br />// комментарии в .css файл не будут перенесены в любом случае"
+PLG_SYSTEM_LESS_FIELD_COMPRESSION_LABEL="Сжатие"
+PLG_SYSTEM_LESS_FIELD_COMPRESSION_DESC="Сжимать выходной .css для уменьшения размера файла и увеличения скорости его загрузки"
+PLG_SYSTEM_LESS_CLIENTSIDESPACER="<h3>Параметры компилятора на клиенте</h3>с дополнением <a href='https://addons.mozilla.org/en-US/firefox/addon/fireless/' target='_blank'>FireLESS</a> для Firefox (работающим) или dev tools для Chrome (ещё не работающим)"
+PLG_SYSTEM_LESS_FIELD_CLIENTSIDE_ENABLE_LABEL="Включить компилятор на клиенте"
+PLG_SYSTEM_LESS_FIELD_CLIENTSIDE_ENABLE_DESC="Отображать номера строк соответствующих файлов .less (вместо главного .css). Включать только для разработки, на рабочих сайтах отключать. В настоящий момент работает только в Firefox/FireBug с дополнением FireLESS"
