Update Russian translations
Improve and add some missing translations

--- a/language/ru-RU/ru-RU.plg_system_less.sys.ini
+++ b/language/ru-RU/ru-RU.plg_system_less.sys.ini
@@ -1,2 +1,2 @@
-PLG_SYSTEM_LESS="Системный плагин - Less Компилятор"
-PLG_SYSTEM_LESS_XML_DESC="Less плагин автоматически компилирует .less файлы в .css файлы, только когда вы вносите изменения в них. Изменения хранятся в кэше."
+PLG_SYSTEM_LESS="Система - Компилятор Less"
+PLG_SYSTEM_LESS_XML_DESC="Плагин компилятор Less автоматически компилирует изменённые файлы .less в файлы .css. Изменения хранятся в кэше, перекомпиляция файлов производится только в том случае, если они были изменены."
